Fix issue with loader content overflowing

--- a/src/app/css/components/loader.css
+++ b/src/app/css/components/loader.css
@@ -15,6 +15,8 @@
   z-index: 10;
 
   animation: fade 0.3s 3s linear both;
+
+  overflow: hidden;
 }
 
 .loader {
